mule-user-guide/v/3.5/xml-module-reference.adoc
= XML Module Reference

//3.3x

The XML module contains several tools to help you read, transform, and write XML.

In addition to the functionality described on this page, you can also use the link:/mule-user-guide/v/3.7/sxc-module-reference[SXC Module Reference], which enables efficient XPath XML routing.

== Supported XPath, XQuery and XSLT Versions

In 2013, the World Wide Web Consotium (http://www.w3.org[W3C]) published a new spec for version 3.0 of the XPath XQuery and XSLT standards. The new version of the standards is at "last call" status, and therefore highly unlikely to undergo major changes.

Mule 3.6.0 provides basic support for version 3.0 of the standards. "Basic support" means that any feature of the spec is supported as long as it doesn't rely on schema awareness, high order functions, or streaming.

Mule 3.6.0 also provides improved support for XPath 2.0, XSLT 2.0 and XQuery 1.0.

=== Important Changes in Mule 3.6.0

The table below lists supported versions of the standards and their related components in Mule 3.6.0.

[column=",",options="header"]
|===
|Component |Version |Supported |Changes in Mule 3.6.0
|XPath |1 |No a|Deprecated in 3.6.0 (supported until Mule 4.0):*

* `xpath2()` function, superseded by the link:/mule-user-guide/v/3.7/xpath[xpath3()] function
* JXPath extractor
* JXPath filter
* Jaxen filter

New function: link:/mule-user-guide/v/3.7/xpath[xpath3()], which includes improved return type handling. For details, see link:/mule-user-guide/v/3.7/xpath[XPath].

| |2 |yes a|
| |3 |Yes |
|XQuery

1

Yes

The link:/mule-user-guide/v/3.6/xslt-transformer[XSLT Transformer] now supports XSLT 3.0. The transformer's behavior and syntax remain unaltered, and you can manually select which XSLT version your transformer should use. For details, see the link:/mule-user-guide/v/3.6/xslt-transformer[XSLT Transformer] documentation.

2

Yes

3

Yes

XSLT

1

Yes

The link:/mule-user-guide/v/3.7/xquery-transformer[XQuery Transformer] now supports XQuery 3.0. The transformer's behavior and syntax remain unaltered, and you can manually select which XQuery version your transformer should use. For details, see link:/mule-user-guide/v/3.7/xquery-transformer[XQuery Transformer] and link:/mule-user-guide/v/3.7/xquery-support[XQuery Support].

2

Yes

3

Yes
|===

== XML Formats

Mule understands a wide variety of XML Java representations:

* org.w3c.dom.Document, org.w3c.dom.Element
* org.dom4j.Document
* javax.xml.transform.Source
* InputStream, String, byte[]
* OutputHandler
* XMLStreamReader
* org.mule.module.xml.transformer.DelayedResult

Any transformer that accepts XML as an input will also understand these types.

== Transformers

There are several standard transformers that process XML inside Mule.

[width="100%",cols="50%,50%",options="header",]
|===
|Transformer |Description
|link:/mule-user-guide/v/3.6/xmlobject-transformers[XmlToObject <-> ObjectToXml] |Converts XML to a Java object and back again using link:http://x-stream.github.io/[XStream].
|link:/mule-user-guide/v/3.6/jaxb-transformers[JAXB XmlToObject <-> JAXB ObjectToXml] |Converts XML to a Java object and back again using the http://java.sun.com/developer/technicalArticles/WebServices/jaxb/[JAXB] binding framework (ships with JDK6)
|link:/mule-user-guide/v/3.6/xslt-transformer[XSLT] |Transforms XML payloads using XSLT.
|link:/mule-user-guide/v/3.7/xquery-transformer[XQuery] |Transforms XML payloads using http://en.wikipedia.org/wiki/XQuery[XQuery].
|link:/mule-user-guide/v/3.7/domtoxml-transformer[DomToXml <-> XmlToDom] |Converts DOM objects to XML and back again.
|link:/mule-user-guide/v/3.6/xmltoxmlstreamreader-transformer[XmlToXMLStreamReader] |Converts XML from a message payload to a StAX XMLStreamReader.
|link:/mule-user-guide/v/3.7/xpath-extractor-transformer[XPath Extractor] |Queries and extracts object graphs using XPath expressions using JAXP.
|link:/mule-user-guide/v/3.7/jxpath-extractor-transformer[JXPath Extractor] _*Deprecated*_ |Queries and extracts object graphs using XPath expressions using JXPath. Deprecated in favor of the `xpath3()` function (see link:/mule-user-guide/v/3.7/xpath[XPath]).
|link:/mule-user-guide/v/3.6/xmlprettyprinter-transformer[XmlPrettyPrinter] |Allows you to output the XML with controlled formatting, including trimming white space and specifying the indent.
|===

=== Efficient Transformations with DelayedResult

Mule contains a special XML output format called DelayedResult. This format allows very efficient XML transformations by delaying any XML serialization until an OutputStream is available.

For example, here is an XSLT transformer set up to use DelayedResult:

[source, xml, linenums]
----
<mxml:xslt-transformer name="transform-in"
                       xsl-file="xslt/transform.xslt"
                       returnClass="org.mule.module.xml.transformer.DelayedResult"/>
----

If the result of this transformation were being sent to an HTTP client, the HTTP client would ask Mule for an OutputHandler and pass in the OutputStream to it. Only then would Mule perform the transformation, writing the output directly to the OutputStream.

If DelayedResult were not used, the XML result would first be written to an in-memory buffer before being written to the OutputStream. This will cause your XML processing to be slower.

== Filters

The XML module contains various XPath filters. For general details on how to use filters, see link:/mule-user-guide/v/3.6/filters[Filters].

=== XPath Filter

[NOTE]
Mule 3.6.0 and later versions support XPath 3.0, which is backwards-compatible with XPath 2.0. On the other hand, XPath 1.0 is deprecated, and while simple expressions may work, some expressions may be incompatible. For details, see link:/mule-user-guide/v/3.7/xpath[XPath].


The XPath filter uses the JAXP libraries to filter XPath expressions.

The following configuration routes messages to the "vm://echo" endpoint when the value of "/e:purchaseOrder/e:shipTo/@country" is "US".

[source, xml, linenums]
----
<outbound>
  <filtering-router>
    <outbound-endpoint address="vm://echo" synchronous="true"/>
    <mule-xml:xpath-filter pattern="/e:purchaseOrder/e:shipTo/@country" expectedValue="US">
      <mule-xml:namespace prefix="e" uri="http://www.example.com"/>
    </mule-xml:xpath-filter>
  </filtering-router>
....
</outbound>
----

=== Schema Validation Filter

The schema validation filter uses the JAXP libraries to validate your message against a schema. 

The following configuration will validate your message against a schema called `schema.xsd` and a schema called `anotherSchema.xsd`.

[source, xml, linenums]
----
<mule-xml:schema-validation-filter schemaLocations="com/myapp/schemas/schema.xsd, com/myapp/schemas/anotherSchema.xsd"/>
----

=== Jaxen Filter

_*Deprecated*_

[NOTE]
====
In Mule 3.6.0, the Jaxen filter has been deprecated, and is kept for backwards compatibility only. Instead, it is recommended to use the new function `xpath3`, which provides improved XPath support.

For a detailed description of the `xpath3` function, see link:/mule-user-guide/v/3.7/xpath[XPath].
====

The Jaxen filter uses the Jaxen library to filter messages based on XPath expressions.

The following configuration routes messages to the "vm://echo" endpoint when the value of "/e:purchaseOrder/e:shipTo/@country" is "US".

[source, xml, linenums]
----
<outbound>
  <filtering-router>
    <outbound-endpoint address="vm://echo" synchronous="true"/>
    <mule-xml:jaxen-filter pattern="/e:purchaseOrder/e:shipTo/@country" expectedValue="US">
      <mule-xml:namespace prefix="e" uri="http://www.example.com"/>
    </mule-xml:jaxen-filter>
  </filtering-router>
....
</outbound>
----

=== JXPath Filter

_*Deprecated*_

[NOTE]
====
In Mule 3.6.0, the JXPath filter has been deprecated, and is kept for backwards compatibility only. Instead, it is recommended to use the new function `xpath3`, which provides improved XPath support.

For a detailed description of the `xpath3` function, see link:/mule-user-guide/v/3.7/xpath[XPath].
====

The JXPath filter is very similar to the Jaxen filter. It is still used for historical purposes (it existed before the Jaxen filter).

[source, xml, linenums]
----
<outbound>
    <filtering-router>
        <outbound-endpoint address="vm://echo" synchronous="true"/>
        <mule-xml:jxpath-filter pattern="/e:purchaseOrder/e:shipTo/@country"
                            expectedValue="US">
            <mule-xml:namespace prefix="e" uri="http://www.example.com"/>
        </mule-xml:jxpath-filter>
    </filtering-router>
....
</outbound>
----

== Splitters

The XML module contains two splitters, a filter-based splitter and a round-robin splitter.

== XML Parsers

In most cases, http://www.saxproject.org/about.html[SAX] is used to parse your XML. If you are using CXF or the XmlToXMLStreamReader, link:https://web.archive.org/web/20150526105309/http://stax.codehaus.org/Home[Stax] is used instead.

If you're using SAX, the SAX XML parser is determined by your JVM. If you want to change your SAX implementation, see http://www.saxproject.org/quickstart.html.
